--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
   </table>
   
   <p class="fot1">
-    <img src="images/1.jpg">
-    <img src="images/2.jpg">
-    <img src="images/3.jpg">
-    <img src="images/4.jpg">
-    <img src="images/5.jpg">
+    <img class="img1" src="images/1.jpg">
+    <img class="img1" src="images/2.jpg">
+    <img class="img1" src="images/3.jpg">
+    <img class="img1" src="images/4.jpg">
+    <img class="img1" src="images/5.jpg">
   </p>
   
 </body>
